--- a/proteoqc/Dockerfile
+++ b/proteoqc/Dockerfile
@@ -1,8 +1,8 @@
 # ProteoQC
+FROM biocontainers/biocontainers:latest
 
-FROM ubuntu:16.04
-
-LABEL version=0.1
+LABEL base.image="biocontainers:latest"
+LABEL version=3
 LABEL software.version=1.0
 LABEL software=proteoqc
 LABEL website="http://bioconductor.org/packages/release/bioc/html/proteoQC.html"
@@ -10,27 +10,26 @@ LABEL tags="Proteomics"
 
 MAINTAINER Bo Wen <wenbo@genomics.cn>
 
+USER root
+
 # Setup package repos
+
 RUN echo "deb http://cloud.r-project.org/bin/linux/ubuntu xenial/" >> /etc/apt/sources.list
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
-
-RUN apt-get -y update && apt-get -y --no-install-recommends install r-base r-base-dev libssl-dev \
+RUN apt-get -y update && apt-get -y --no-install-recommends install r-base r-base-dev build-essential libssl-dev \
                                     libcurl4-openssl-dev git \
-                                    libxml2-dev libnetcdf-dev\
-                                    build-essential expat libexpat1\
+                                    libxml2-dev libnetcdf-dev libgomp1\
+                                    expat libexpat1\
                                     libssh2-1-dev r-cran-ncdf4 netcdf-bin\
                                     libexpat1-dev default-jre
 
 RUN echo 'options("repos"="http://cran.rstudio.com")' >> /etc/R/Rprofile.site && \
-    R -e "install.packages('devtools'); source('https://bioconductor.org/biocLite.R');biocLite()"
-
-RUN R -e "library(devtools); install_github('wenbostar/proteoQC')"
+    R -e "install.packages('devtools');library(devtools);source('https://bioconductor.org/biocLite.R');biocLite('proteoQC')"
 RUN apt-get clean && apt-get autoremove -y && rm -rf /var/lib/{apt,dpkg,cache,log}/ /tmp/* /var/tmp/*
 
-ADD ./runProteoQC.sh /
-
-RUN chmod +x /runProteoQC.sh
+ADD ./runProteoQC.sh /usr/local/bin
+RUN chmod +x /usr/local/bin/runProteoQC.sh
 
 WORKDIR /data/
 
-ENTRYPOINT ["/runProteoQC.sh"]
+ENTRYPOINT ["/usr/local/bin/runProteoQC.sh"]
