--- a/tpp/5.0/Dockerfile
+++ b/tpp/5.0/Dockerfile
@@ -20,9 +20,11 @@ USER root
 WORKDIR /usr/local/
 
 RUN apt-get update && apt-get install -y libfindbin-libs-perl && apt-get clean all
+RUN apt-get update && apt-get install -y libxml-sax-expat-perl && apt-get clean all
 
 RUN wget https://github.com/BioContainers/software-archive/releases/download/TPP/tpp-5.0.zip && \
   unzip tpp-5.0.zip
+RUN chmod a+x /usr/local/tpp/bin/*
 
 ENV PATH /usr/local/tpp/bin/:$PATH
 
