--- a/tpp/4.8/Dockerfile
+++ b/tpp/4.8/Dockerfile
@@ -19,6 +19,8 @@ USER root
 
 WORKDIR /usr/local/
 
+RUN apt-get update && apt-get install -y libxml-sax-expat-perl && apt-get clean all
+
 RUN wget https://github.com/BioDocker/software-archive/releases/download/TPP/tpp-4.8.0.zip && \
   unzip tpp-4.8.0.zip
 
