Change in the main structure of the recipes as the specification

--- a/DiffExpIR/0.0.1/Dockerfile
+++ b/DiffExpIR/0.0.1/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="bamtools:latest"
 LABEL version="3"
 LABEL software="DiffExpIR"
 LABEL software.version="0.0.1"
-LABEL description="Differentially expressed intron retention"
-LABEL website="https://github.com/r78v10a07/DiffExpIR"
-LABEL documentation="https://github.com/r78v10a07/DiffExpIR"
+LABEL about.summary="Differentially expressed intron retention"
+LABEL about.home="https://github.com/r78v10a07/DiffExpIR"
+LABEL about.documentation="https://github.com/r78v10a07/DiffExpIR"
 LABEL license="https://github.com/r78v10a07/DiffExpIR"
-LABEL tags="RNA-seq"
+LABEL about.tags="RNA-seq"
 
 ################## MAINTAINER ######################
 MAINTAINER Roberto Vera Alvarez <r78v10a07@gmail.com>
