--- a/bamtools/2.4.0/Dockerfile
+++ b/bamtools/2.4.0/Dockerfile
@@ -7,11 +7,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="bamtools"
 LABEL software.version="2.4.0"
-LABEL description="C++ API & command-line toolkit for working with BAM data"
-LABEL website="https://github.com/pezmaster31/bamtools"
-LABEL documentation="https://github.com/pezmaster31/bamtools/wiki"
+LABEL about.summary="C++ API & command-line toolkit for working with BAM data"
+LABEL about.home="https://github.com/pezmaster31/bamtools"
+LABEL about.documentation="https://github.com/pezmaster31/bamtools/wiki"
 LABEL license="https://github.com/pezmaster31/bamtools/blob/master/LICENSE"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
 
