--- a/bedtools/2.25.0/Dockerfile
+++ b/bedtools/2.25.0/Dockerfile
@@ -8,11 +8,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="bedtools"
 LABEL software.version="2.25.0"
-LABEL description="a powerful toolset for genome arithmetic"
-LABEL website="http://bedtools.readthedocs.io/en/latest/"
-LABEL documentation="http://quinlanlab.org/tutorials/bedtools/bedtools.html"
+LABEL about.summary="a powerful toolset for genome arithmetic"
+LABEL about.home="http://bedtools.readthedocs.io/en/latest/"
+LABEL about.documentation="http://quinlanlab.org/tutorials/bedtools/bedtools.html"
 LABEL license="https://github.com/arq5x/bedtools2/blob/master/LICENSE"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
