--- a/bowtie/1.1.2/Dockerfile
+++ b/bowtie/1.1.2/Dockerfile
@@ -7,11 +7,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="bowtie"
 LABEL software.version="1.1.2"
-LABEL description="an ultrafast memory-efficient short read aligner"
-LABEL website="http://bowtie-bio.sourceforge.net/index.shtml"
-LABEL documentation="http://bowtie-bio.sourceforge.net/manual.shtml"
+LABEL about.summary="an ultrafast memory-efficient short read aligner"
+LABEL about.home="http://bowtie-bio.sourceforge.net/index.shtml"
+LABEL about.documentation="http://bowtie-bio.sourceforge.net/manual.shtml"
 LABEL license="http://bowtie-bio.sourceforge.net/index.shtml"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
