--- a/comet/2015012/Dockerfile
+++ b/comet/2015012/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="3"
 LABEL software="Comet"
 LABEL software.version="2015012"
-LABEL description="an open source tandem mass spectrometry sequence database search tool"
-LABEL website="http://comet-ms.sourceforge.net/"
-LABEL documentation="http://comet-ms.sourceforge.net/parameters/parameters_201601/"
+LABEL about.summary="an open source tandem mass spectrometry sequence database search tool"
+LABEL about.home="http://comet-ms.sourceforge.net/"
+LABEL about.documentation="http://comet-ms.sourceforge.net/parameters/parameters_201601/"
 LABEL license="http://comet-ms.sourceforge.net/"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
