--- a/emboss/6.5.7/Dockerfile
+++ b/emboss/6.5.7/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="emboss"
 LABEL software.version="6.5.7"
-LABEL description="software analysis package"
-LABEL website="http://emboss.sourceforge.net/what/"
-LABEL documentation="http://emboss.sourceforge.net/docs/"
+LABEL about.summary="software analysis package"
+LABEL about.home="http://emboss.sourceforge.net/what/"
+LABEL about.documentation="http://emboss.sourceforge.net/docs/"
 LABEL license="http://emboss.sourceforge.net/licence/"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
