--- a/jbrowse/1.11.6/Dockerfile
+++ b/jbrowse/1.11.6/Dockerfile
@@ -4,9 +4,9 @@
 # Version:          1
 # Software:         jbrowse
 # Software Version: 1.11.6
-# Description:      JBrowse is a fast, embeddable genome browser built completely with JavaScript and HTML5, with optional run-once data formatting tools written in Perl.
-# Website:          http://jbrowse.org/
-# Tags:             Genomics
+# about.summary:      JBrowse is a fast, embeddable genome browser built completely with JavaScript and HTML5, with optional run-once data formatting tools written in Perl.
+# about.home:          http://jbrowse.org/
+# about.tags:             Genomics
 # Provides:         jbrowse 1.11.6
 ################## BASE IMAGE ###################### :       biodckr/biodocker
 # Build Cmd:        docker build --rm -t biodckrdev/jbrowse 1.11.6/.
