--- a/openms/2.2.0/Dockerfile
+++ b/openms/2.2.0/Dockerfile
@@ -7,11 +7,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2.2"
 LABEL software="OpenMS"
 LABEL software.version="2.2"
-LABEL description="C++ libraries ans tools for MS/MS data analysis"
-LABEL website="http://www.openms.org/"
-LABEL documentation="http://ftp.mi.fu-berlin.de/pub/OpenMS/release2.2.0-documentation/html/index.html"
+LABEL about.summary="C++ libraries ans tools for MS/MS data analysis"
+LABEL about.home="http://www.openms.org/"
+LABEL about.documentation="http://ftp.mi.fu-berlin.de/pub/OpenMS/release2.2.0-about.documentation/html/index.html"
 LABEL license="http://www.openms.org/"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Hannes Rost <hannes.rost@utoronto.ca>
