--- a/proteinprophet/201510131012/Dockerfile
+++ b/proteinprophet/201510131012/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="ProteinProphet"
 LABEL software.version="201510131012"
-LABEL description="Protein inference for MS/MS analysis"
-LABEL website="http://proteinprophet.sourceforge.net/"
-LABEL documentation="http://proteinprophet.sourceforge.net/"
+LABEL about.summary="Protein inference for MS/MS analysis"
+LABEL about.home="http://proteinprophet.sourceforge.net/"
+LABEL about.documentation="http://proteinprophet.sourceforge.net/"
 LABEL license="http://proteinprophet.sourceforge.net/"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
