--- a/raremetalworker/4.13.7/Dockerfile
+++ b/raremetalworker/4.13.7/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="raremetalworker"
 LABEL software.version="4.13.7"
-LABEL description="single variant analysis, generating summary statistics for gene level meta analyses"
-LABEL website="http://genome.sph.umich.edu/wiki/RAREMETALWORKER"
-LABEL documentation=" http://genome.sph.umich.edu/wiki/RAREMETALWORKER"
+LABEL about.summary="single variant analysis, generating summary statistics for gene level meta analyses"
+LABEL about.home="http://genome.sph.umich.edu/wiki/RAREMETALWORKER"
+LABEL about.documentation=" http://genome.sph.umich.edu/wiki/RAREMETALWORKER"
 LABEL license=" http://genome.sph.umich.edu/wiki/RAREMETALWORKER"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 
 ################## BEGIN INSTALLATION ######################
