--- a/soapdenovo/240/Dockerfile
+++ b/soapdenovo/240/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="soapdenovo"
 LABEL software.version="240"
-LABEL description="a novel short-read assembly method that can build a de novo draft assembly for the human-sized genomes"
-LABEL website="http://soap.genomics.org.cn/soapdenovo.html"
-LABEL documentation="http://soap.genomics.org.cn/soapdenovo.html"
+LABEL about.summary="a novel short-read assembly method that can build a de novo draft assembly for the human-sized genomes"
+LABEL about.home="http://soap.genomics.org.cn/soapdenovo.html"
+LABEL about.documentation="http://soap.genomics.org.cn/soapdenovo.html"
 LABEL license="http://soap.genomics.org.cn/soapdenovo.html"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
