--- a/soapec/2.03/Dockerfile
+++ b/soapec/2.03/Dockerfile
@@ -5,11 +5,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="soapec"
 LABEL software.version="2.03"
-LABEL description="A correction tool for SOAPdenovo"
-LABEL website="http://soap.genomics.org.cn/soapdenovo.html"
-LABEL documentation="http://soap.genomics.org.cn/soapdenovo.html"
+LABEL about.summary="A correction tool for SOAPdenovo"
+LABEL about.home="http://soap.genomics.org.cn/soapdenovo.html"
+LABEL about.documentation="http://soap.genomics.org.cn/soapdenovo.html"
 LABEL license="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 
 ################## BEGIN INSTALLATION ######################
