--- a/tandem/10-12-01-1/Dockerfile
+++ b/tandem/10-12-01-1/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="X!Tandem"
 LABEL software.version="10-12-01-1"
-LABEL description="software that can match tandem mass spectra with peptide sequences"
-LABEL website="http://www.thegpm.org/tandem/"
-LABEL documentation="http://www.thegpm.org/tandem/"
+LABEL about.summary="software that can match tandem mass spectra with peptide sequences"
+LABEL about.home="http://www.thegpm.org/tandem/"
+LABEL about.documentation="http://www.thegpm.org/tandem/"
 LABEL license="http://www.thegpm.org/tandem/"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
