--- a/tophat/2.1.1/Dockerfile
+++ b/tophat/2.1.1/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="tophat"
 LABEL software.version="2.1.1"
-LABEL description="TopHat is a fast splice junction mapper for RNA-Seq reads"
-LABEL website="https://ccb.jhu.edu/software/tophat/index.shtml"
-LABEL documentation="https://ccb.jhu.edu/software/tophat/index.shtml"
+LABEL about.summary="TopHat is a fast splice junction mapper for RNA-Seq reads"
+LABEL about.home="https://ccb.jhu.edu/software/tophat/index.shtml"
+LABEL about.documentation="https://ccb.jhu.edu/software/tophat/index.shtml"
 LABEL license="https://opensource.org/licenses/Artistic-2.0"
-LABEL tags="Genomics, Transcriptomics"
+LABEL about.tags="Genomics, Transcriptomics"
 
 ################## BEGIN INSTALLATION ######################
 
