--- a/toppas/1.11.1-3/Dockerfile
+++ b/toppas/1.11.1-3/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="TOPPAS"
 LABEL software.version="2016012"
-LABEL description="a graphical workflow editor for the analysis of high-throughput proteomics data"
-LABEL website="http://open-ms.sourceforge.net/workflow-integration/toppasworkflows/"
-LABEL documentation="http://open-ms.sourceforge.net/workflow-integration/toppasworkflows/"
+LABEL about.summary="a graphical workflow editor for the analysis of high-throughput proteomics data"
+LABEL about.home="http://open-ms.sourceforge.net/workflow-integration/toppasworkflows/"
+LABEL about.documentation="http://open-ms.sourceforge.net/workflow-integration/toppasworkflows/"
 LABEL license="http://open-ms.sourceforge.net/workflow-integration/toppasworkflows/"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
