--- a/abyss/1.9.0/Dockerfile
+++ b/abyss/1.9.0/Dockerfile
@@ -7,11 +7,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="3"
 LABEL software="abyss"
 LABEL software.version="1.9.0"
-LABEL description="ABySS is a *de novo* sequence assembler"
-LABEL website="http://www.bcgsc.ca/platform/bioinfo/software/abyss/releases/1.9.0"
-LABEL documentation="https://github.com/bcgsc/abyss#abyss"
+LABEL about.summary="ABySS is a *de novo* sequence assembler"
+LABEL about.home="http://www.bcgsc.ca/platform/bioinfo/software/abyss/releases/1.9.0"
+LABEL about.documentation="https://github.com/bcgsc/abyss#abyss"
 LABEL license="https://github.com/bcgsc/abyss/blob/master/LICENSE"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
 
