--- a/aliscore/2.0/Dockerfile
+++ b/aliscore/2.0/Dockerfile
@@ -8,11 +8,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="Aliscore"
 LABEL software.version="v.2.0"
-LABEL description="Aliscore is designed to filter alignment ambiguous or randomly similar sites in multiple sequence alignments (MSA)."
-LABEL website="https://www.zfmk.de/en/research/research-centres-and-groups/aliscore"
-LABEL documentation="https://www.zfmk.de/dateien/atoms/files/aliscore_v.2.0_manual_0.pdf"
+LABEL about.summary="Aliscore is designed to filter alignment ambiguous or randomly similar sites in multiple sequence alignments (MSA)."
+LABEL about.home="https://www.zfmk.de/en/research/research-centres-and-groups/aliscore"
+LABEL about.documentation="https://www.zfmk.de/dateien/atoms/files/aliscore_v.2.0_manual_0.pdf"
 LABEL license="https://www.gnu.org/licenses/old-licenses/gpl-2.0.html"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
 
