--- a/biodocker/Dockerfile
+++ b/biodocker/Dockerfile
@@ -4,9 +4,9 @@
 # Version:          4
 # Software:         BioDocker base Image
 # Software Version: 08252016
-# Description:      Basic image for BioDocker
-# Website:          http://biodocker.org/
-# Tags:             Genomics|Proteomics|Transcriptomics|General|Metabolomics
+# about.summary:      Basic image for BioDocker
+# about.home:          http://biodocker.org/
+# about.tags:             Genomics|Proteomics|Transcriptomics|General|Metabolomics
 # Provides:         autotools-dev|automake|cmake|curl|fuse|git|wget|zip|openjdk-7-jre|build-essential|pkg-config|python|python-dev|python-pip|zlib1g-dev
 ################## BASE IMAGE ###################### :       ubuntu:16.04
 # Build Cmd:        docker build biodckr/biodocker .
