--- a/bowtie2/2.2.8/Dockerfile
+++ b/bowtie2/2.2.8/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="bowtie2"
 LABEL software.version="2.2.8"
-LABEL description="an ultrafast memory-efficient short read aligner"
-LABEL website="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
-LABEL documentation="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
+LABEL about.summary="an ultrafast memory-efficient short read aligner"
+LABEL about.home="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
+LABEL about.documentation="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
 LABEL license="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
