--- a/clustal-omega/1.2.1-1/Dockerfile
+++ b/clustal-omega/1.2.1-1/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="3"
 LABEL software="clustal-omega"
 LABEL software.version="1.2.1-1"
-LABEL description="general purpose multiple sequence alignment program for proteins"
-LABEL website="http://www.clustal.org/omega/"
-LABEL documentation="http://www.clustal.org/omega/#Documentation"
+LABEL about.summary="general purpose multiple sequence alignment program for proteins"
+LABEL about.home="http://www.clustal.org/omega/"
+LABEL about.documentation="http://www.clustal.org/omega/#about.documentation"
 LABEL license="http://www.clustal.org/omega/"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
