--- a/fastqc/0.11.5/Dockerfile
+++ b/fastqc/0.11.5/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="FASTQC"
 LABEL software.version="0.11.5"
-LABEL description="A quality control tool for high throughput sequence data."
-LABEL website="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/"
-LABEL documentation="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/Help/"
+LABEL about.summary="A quality control tool for high throughput sequence data."
+LABEL about.home="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/"
+LABEL about.documentation="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/Help/"
 LABEL license="https://www.gnu.org/copyleft/gpl.html"
-LABEL tags="General"
+LABEL about.tags="General"
 
 
 ################## MAINTAINER ######################
