--- a/gapcloser/1.12-r6/Dockerfile
+++ b/gapcloser/1.12-r6/Dockerfile
@@ -7,11 +7,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="gapcloser"
 LABEL software.version="1.12-r6"
-LABEL description="A novel short-read assembly method that can build a de novo draft assembly for the human-sized genomes"
-LABEL website="http://soap.genomics.org.cn/gapcloser.html"
-LABEL documentation="http://soap.genomics.org.cn/gapcloser.html"
+LABEL about.summary="A novel short-read assembly method that can build a de novo draft assembly for the human-sized genomes"
+LABEL about.home="http://soap.genomics.org.cn/gapcloser.html"
+LABEL about.documentation="http://soap.genomics.org.cn/gapcloser.html"
 LABEL license="http://soap.genomics.org.cn/gapcloser.html"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 ################## INSTALLATION ######################
 ################## BEGIN INSTALLATION ######################
