--- a/magicblast/1.3.0/Dockerfile
+++ b/magicblast/1.3.0/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="3"
 LABEL software="magicblast"
 LABEL software.version="1.3.0"
-LABEL description="Magic-BLAST is a new tool for mapping large sets of next-generation RNA or DNA sequencing runs against a whole genome or transcriptome"
-LABEL website="https://github.com/ncbi/magicblast"
-LABEL documentation="https://ncbi.github.io/magicblast/"
+LABEL about.summary="Magic-BLAST is a new tool for mapping large sets of next-generation RNA or DNA sequencing runs against a whole genome or transcriptome"
+LABEL about.home="https://github.com/ncbi/magicblast"
+LABEL about.documentation="https://ncbi.github.io/magicblast/"
 LABEL License_file = /home/biodocker/bin/LICENSE
-LABEL tags="BLAST"
+LABEL about.tags="BLAST"
 
 
 ################## MAINTAINER ######################
