--- a/novor/1b/Dockerfile
+++ b/novor/1b/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="3"
 LABEL software="Novor"
 LABEL software.version="1b"
-LABEL description="real-time peptide de novo sequencing"
-LABEL website="http://www.rapidnovor.com/"
-LABEL documentation="http://www.rapidnovor.com/"
+LABEL about.summary="real-time peptide de novo sequencing"
+LABEL about.home="http://www.rapidnovor.com/"
+LABEL about.documentation="http://www.rapidnovor.com/"
 LABEL license="Academic only: https://www.rapidnovor.com/rndl/novor_aca_eula.txt"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
