--- a/percolator/3.0/Dockerfile
+++ b/percolator/3.0/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="3"
 LABEL software="Percolator"
 LABEL software.version="3.0"
-LABEL description="Semi-supervised learning for peptide identification from shotgun proteomics datasets"
-LABEL website="http://percolator.ms/"
-LABEL documentation="http://percolator.ms/"
+LABEL about.summary="Semi-supervised learning for peptide identification from shotgun proteomics datasets"
+LABEL about.home="http://percolator.ms/"
+LABEL about.documentation="http://percolator.ms/"
 LABEL license="http://percolator.ms/"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
