--- a/pia/1.3.0/Dockerfile
+++ b/pia/1.3.0/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="PIA - Protein Inference Algorithms"
 LABEL software.version="1.3.0"
-LABEL description="Compile PIA XML files and run analysis pipelines for protein inference with this image"
-LABEL website="https://github.com/mpc-bioinformatics/pia"
-LABEL documentation="https://github.com/julianu/pia-tutorial"
+LABEL about.summary="Compile PIA XML files and run analysis pipelines for protein inference with this image"
+LABEL about.home="https://github.com/mpc-bioinformatics/pia"
+LABEL about.documentation="https://github.com/julianu/pia-tutorial"
 LABEL license="https://github.com/mpc-bioinformatics/pia"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Julian Uszkoreit <julian.uszkoreit@rub.de>
