--- a/pymol-jupiter/Dockerfile
+++ b/pymol-jupiter/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="PyMol-Jupyter"
 LABEL software.version="1"
-LABEL description="a portable way of interacting with PyMol via Jupyter notebook"
-LABEL website="http://github.com/ocramz/jupyter-docker-pymol"
-LABEL documentation="http://github.com/ocramz/jupyter-docker-pymol"
+LABEL about.summary="a portable way of interacting with PyMol via Jupyter notebook"
+LABEL about.home="http://github.com/ocramz/jupyter-docker-pymol"
+LABEL about.documentation="http://github.com/ocramz/jupyter-docker-pymol"
 LABEL license="http://github.com/ocramz/jupyter-docker-pymol"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 
