--- a/saintq/0.0.2/Dockerfile
+++ b/saintq/0.0.2/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="SAINTq"
 LABEL software.version="0.0.2"
-LABEL description="assigning confidence scores to protein-protein interactions based on quantitative proteomics"
-LABEL website="http://saint-apms.sourceforge.net/Main.html"
-LABEL documentation="http://saint-apms.sourceforge.net/Main.html"
+LABEL about.summary="assigning confidence scores to protein-protein interactions based on quantitative proteomics"
+LABEL about.home="http://saint-apms.sourceforge.net/Main.html"
+LABEL about.documentation="http://saint-apms.sourceforge.net/Main.html"
 LABEL license="http://saint-apms.sourceforge.net/Main.html"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 
