--- a/samtools/1.2/Dockerfile
+++ b/samtools/1.2/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="Samtools"
 LABEL software.version="1.2"
-LABEL description="Tools for manipulating next-generation sequencing data"
-LABEL website="https://github.com/samtools/samtools"
-LABEL documentation="https://github.com/samtools/samtools"
+LABEL about.summary="Tools for manipulating next-generation sequencing data"
+LABEL about.home="https://github.com/samtools/samtools"
+LABEL about.documentation="https://github.com/samtools/samtools"
 LABEL license="https://github.com/samtools/samtools"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
