--- a/snpeff/4.1k/Dockerfile
+++ b/snpeff/4.1k/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="snpeff"
 LABEL software.version="4.1"
-LABEL description="Genetic variant annotation and effect prediction toolbox"
-LABEL website="http://snpeff.sourceforge.net/"
-LABEL documentation="http://snpeff.sourceforge.net/"
+LABEL about.summary="Genetic variant annotation and effect prediction toolbox"
+LABEL about.home="http://snpeff.sourceforge.net/"
+LABEL about.documentation="http://snpeff.sourceforge.net/"
 LABEL license="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
-LABEL tags="Genomics"
+LABEL about.tags="Genomics"
 
 
 ################## INSTALLATION ######################
