--- a/spectra-cluster-cli/1.0/Dockerfile
+++ b/spectra-cluster-cli/1.0/Dockerfile
@@ -6,11 +6,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="spectra-cluster-cli"
 LABEL software.version="v1.0-beta"
-LABEL description="PRIDE Cluster algorithm to cluster heterogeneous mass spectra"
-LABEL website="https://github.com/spectra-cluster/spectra-cluster-cli"
-LABEL documentation="https://github.com/spectra-cluster/spectra-cluster-cli"
+LABEL about.summary="PRIDE Cluster algorithm to cluster heterogeneous mass spectra"
+LABEL about.home="https://github.com/spectra-cluster/spectra-cluster-cli"
+LABEL about.documentation="https://github.com/spectra-cluster/spectra-cluster-cli"
 LABEL license="https://github.com/spectra-cluster/spectra-cluster-cli"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Yasset Perez-Riverol <yperez@ebi.ac.uk>
