--- a/tandem/15-12-15-2/Dockerfile
+++ b/tandem/15-12-15-2/Dockerfile
@@ -7,11 +7,11 @@ LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="X!Tandem"
 LABEL software.version="15-12-15-2"
-LABEL description="software that can match tandem mass spectra with peptide sequences"
-LABEL website="http://www.thegpm.org/tandem/"
-LABEL documentation="http://www.thegpm.org/tandem/"
+LABEL about.summary="software that can match tandem mass spectra with peptide sequences"
+LABEL about.home="http://www.thegpm.org/tandem/"
+LABEL about.documentation="http://www.thegpm.org/tandem/"
 LABEL license="http://www.thegpm.org/tandem/"
-LABEL tags="Proteomics"
+LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
